# eliza-discord

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs  tui.rs
